resolved issue in Firefox with line wrapping

--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -81,7 +81,13 @@ mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
 pre, code, kbd, samp { font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 1em; }
 
 /* Improve readability of pre-formatted text in all browsers */
-pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
+pre {
+   white-space: -moz-pre-wrap; /* Firefox */
+   white-space: -pre-wrap; /* ancient Opera */
+   white-space: -o-pre-wrap; /* newer Opera */
+   white-space: pre-wrap; /* Chrome; W3C standard */
+   word-wrap: break-word; /* IE */
+}
 
 q { quotes: none; }
 q:before, q:after { content: ""; content: none; }
