--- a/sass/style.scss
+++ b/sass/style.scss
@@ -105,7 +105,6 @@ footer {
 
 pre {
   font-family: monospace, sans-serif;
-  white-space: pre;
   border-width: 1px;
   background-color: #272727;
   
